# licpy

./: .buildinfo  .travis.yml  CMakeLists.txt  Makefile  README.rst  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
doc/: Makefile  conf.py  index.rst  references.bib
licpy/: __init__.py  lic.py  pixelize.py  plot.py  resample.cpp  resample_wrap.py
licpy/command/: vf.py
licpy/vectorfields/: diag.py  dot.py  ex.py  ey.py  ey_ramp.py  jetx.py  jetx_funnel.py  jety.py  jety_funnel.py  periodic_conv.py  periodic_ring.py  periodic_rot.py  ring.py  rot.py  rotunit.py  spiral.py  transform.py  vortices.py  vortices_anti.py
